--- a/TitleComercial/index.html
+++ b/TitleComercial/index.html
@@ -2,9 +2,12 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8" />
-  <title>Título animado</title>
+  <title>Título animado – Dashboard Comercial</title>
 
+  <!-- Tableau Extensions API -->
   <script src="https://extensions.tableauusercontent.com/resources/tableau.extensions.1.latest.js"></script>
+
+  <!-- Anime.js -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/3.2.1/anime.min.js"></script>
 
   <style>
@@ -13,38 +16,148 @@
       padding: 0;
       background: transparent;
       overflow: hidden;
+      font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
     }
 
-    #title {
-      font-family: "Segoe UI", system-ui, sans-serif;
-      font-size: 26px;
+    .wrapper {
+      padding: 6px 16px;
+      /* Fondo tipo “tarjeta” pero puedes dejarlo transparente si quieres */
+      background: rgba(3, 7, 18, 0.7);
+      border-radius: 999px;
+      display: inline-flex;
+      align-items: center;
+      gap: 12px;
+      border: 1px solid rgba(148, 163, 184, 0.4);
+      box-shadow: 0 8px 20px rgba(0,0,0,0.35);
+    }
+
+    .pill {
+      font-size: 11px;
+      text-transform: uppercase;
+      letter-spacing: 0.16em;
+      padding: 2px 8px;
+      border-radius: 999px;
+      border: 1px solid rgba(45, 212, 191, 0.7);
+      color: #a5f3fc;
+    }
+
+    .title {
+      font-size: 22px;
       font-weight: 700;
       letter-spacing: 0.12em;
       text-transform: uppercase;
-      color: #ffffff;
-      text-shadow: 0 0 8px rgba(0,0,0,0.6);
-      padding: 6px 14px;
-      border-radius: 999px;
+      color: #e5e7eb;
+      position: relative;
+      white-space: nowrap;
+    }
+
+    .title-word {
       display: inline-block;
-      background: linear-gradient(90deg, #047857, #0f766e);
+      position: relative;
+      padding: 0 2px;
+    }
+
+    /* “Caja” luminosa por palabra (rollo demo de Anime.js) */
+    .title-word::before {
+      content: "";
+      position: absolute;
+      inset: 50% 0;
+      transform: translateY(-50%);
+      border-radius: 6px;
+      background: linear-gradient(90deg, rgba(34,211,238,0.14), rgba(56,189,248,0.26));
+      opacity: 0;
+      z-index: -1;
+    }
+
+    .subtitle {
+      font-size: 11px;
+      color: #9ca3af;
+      margin-left: 4px;
+      letter-spacing: 0.16em;
+      text-transform: uppercase;
     }
   </style>
 </head>
 <body>
-  <div id="title">Dashboard Comercial</div>
+  <div class="wrapper">
+    <div class="pill">Grupo Bolivisión</div>
+    <div>
+      <div class="title" id="title-text">
+        Dashboard Comercial
+      </div>
+      <div class="subtitle">
+        Pauta, cumplimiento y responsables
+      </div>
+    </div>
+  </div>
 
   <script>
+    // 1) Inicializar Tableau (para que funcione como extensión)
     tableau.extensions.initializeAsync().then(() => {
-      // Animación respirando
-      anime({
-        targets: '#title',
-        scale: [1, 1.05],
-        easing: 'easeInOutSine',
+      console.log("✅ Extensión de título inicializada");
+      startTitleAnimation();
+    }).catch(err => {
+      console.error("Error al inicializar la extensión:", err);
+      // Aun así mostramos la animación para pruebas fuera de Tableau
+      startTitleAnimation();
+    });
+
+    function startTitleAnimation() {
+      const titleEl = document.getElementById('title-text');
+      const originalText = titleEl.innerText.trim();
+
+      // 2) Dividir por palabras y envolver en spans
+      const words = originalText.split(/\s+/);
+      titleEl.innerHTML = words.map(w => `
+        <span class="title-word">
+          <span class="title-word-inner">${w}</span>
+        </span>
+      `).join(' ');
+
+      // 3) Animación de entrada tipo “Split by words”
+      const innerTargets = document.querySelectorAll('.title-word-inner');
+      const boxTargets = document.querySelectorAll('.title-word::before');
+
+      anime.set(innerTargets, {
+        opacity: 0,
+        translateY: 32,
+        rotateX: 75
+      });
+
+      anime.set('.title-word::before', {
+        opacity: 0,
+        scaleX: 0.3
+      });
+
+      // Timeline principal
+      const tl = anime.timeline({
+        easing: 'easeOutExpo'
+      });
+
+      tl.add({
+        targets: innerTargets,
+        opacity: [0, 1],
+        translateY: [32, 0],
+        rotateX: [75, 0],
+        duration: 900,
+        delay: anime.stagger(120)
+      }).add({
+        targets: '.title-word::before',
+        opacity: [0, 1],
+        scaleX: [0.3, 1],
+        duration: 700,
+        delay: anime.stagger(120),
+        offset: '-=700'
+      }).add({
+        // Pequeña “respiración” constante
+        targets: '.title',
+        scale: [1, 1.03],
+        duration: 1600,
         direction: 'alternate',
         loop: true,
-        duration: 1500
+        easing: 'easeInOutSine'
       });
-    });
+    }
   </script>
 </body>
 </html>
